<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:background="@color/background" 
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent" 
	android:padding="30dip" 
	android:orientation="horizontal">
	<LinearLayout android:orientation="vertical" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:layout_gravity="center">
		<TextView android:text="@string/reports_menu_header_text" 
	  		android:layout_height="wrap_content" 
	  		android:layout_width="wrap_content" 
	  		android:layout_gravity="center" 
	  		android:layout_marginBottom="25dip" 
	  		android:textSize="23sp" />	  	 
	  	<Button android:id="@+id/history_report_button" 
	  		android:layout_width="fill_parent" 
	  		android:layout_height="wrap_content" 
	  		android:text="@string/history_report_label" /> 
	  	<Button android:id="@+id/common_report_button" 
	  		android:layout_width="fill_parent" 
	  		android:layout_height="wrap_content" 
	  		android:text="@string/common_report_label" />
	  	<Button android:id="@+id/consolidated_report_button" 
	  		android:layout_width="fill_parent" 
	  		android:layout_height="wrap_content" 
	  		android:text="@string/consolidated_report_label" /> 
	  	<Button android:id="@+id/monthly_balance_report_button" 
	  		android:layout_width="fill_parent" 
	  		android:layout_height="wrap_content" 
	  		android:text="@string/monthly_balance_report_label" /> 
	    <Button android:id="@+id/backButton"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"	               
	        android:text="@string/back_button_label"/> 
  	</LinearLayout>
</LinearLayout>
