<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dip"  
	android:orientation="vertical">
    <LinearLayout android:orientation="vertical" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:layout_gravity="center"
		android:layout_weight="1">
		
        <TextView android:text="@string/what_to_show_text" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/>
		<Spinner android:id="@+id/recordsFilterSpinner"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"/>
        
        <TextView android:text="@string/accounts_label" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/>
		<Spinner android:id="@+id/accountsFilteringSpinner"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"/>
		
		<TextView android:text="@string/categories_label" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/>
		<Spinner android:id="@+id/categoriesFilteringSpinner"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"/>	
			
		<TextView android:text="@string/time_interval_text" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/timeFilteringSpinner" 
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content"
        	android:layout_marginBottom="5dip"/>	
		
		<LinearLayout android:orientation="horizontal" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 		
			android:layout_gravity="center">
			
			<LinearLayout android:orientation="vertical" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 		
				android:layout_gravity="center"

				android:layout_weight="1">
				<TextView android:text="@string/start_date_text" 
		        	android:layout_width="wrap_content" 
		        	android:layout_height="wrap_content"/>
				<Button android:id="@+id/startDateButton"
					android:layout_width="match_parent" 
					android:layout_height="wrap_content"/>
				<ImageButton android:id="@+id/rollBackwardButton"
					android:layout_width="match_parent" 
					android:layout_height="wrap_content"
					android:src="@drawable/ic_menu_back"/>
			</LinearLayout>
			
			<LinearLayout android:orientation="vertical" 
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 		
				android:layout_gravity="center"
				android:layout_weight="1">	
				<TextView android:text="@string/end_date_text" 
		        	android:layout_width="wrap_content" 
		        	android:layout_height="wrap_content"/>
				<Button android:id="@+id/endDateButton"
					android:layout_width="match_parent" 
					android:layout_height="wrap_content"/>
				<ImageButton android:id="@+id/rollForwardButton"
					android:layout_width="match_parent" 
					android:layout_height="wrap_content"					
					android:src="@drawable/ic_menu_forward"/>	
			</LinearLayout>	
		</LinearLayout> 					
	</LinearLayout> 
		
    <LinearLayout android:orientation="horizontal" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 		
		android:layout_gravity="center">
	
    	<Button android:id="@+id/backButton"
    		android:gravity="center"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"	               
	        android:layout_weight="1.8"
	        android:text="@string/back_button_label"
	        android:drawableLeft="@drawable/undo"/>
	    
	    <Button android:id="@+id/showReportButton"
    		android:gravity="center"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"	               
	        android:layout_weight="1"
	        android:text="@string/show_report_button_label"
	        android:drawableLeft="@drawable/ic_menu_chart"/>    
   	</LinearLayout>			
	      
</LinearLayout>
