<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dip"  
	android:orientation="vertical">
    <LinearLayout android:orientation="vertical" 
		android:layout_height="0dip" 
		android:layout_width="fill_parent" 
		android:layout_gravity="center"
		android:layout_weight="1">
		
        <TextView android:text="@string/category_name_text" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/>
		<EditText android:id="@+id/categoryNameEditText"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:inputType="textCapSentences"
			android:maxLength="20"
			android:layout_marginBottom="10dip"/>
			
		<TextView android:text="@string/category_group_text" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/categoryGroupSpinner" 
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content"
        	android:entries="@array/category_groups_array"/>	
			
	</LinearLayout> 
		
    <LinearLayout android:orientation="horizontal" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 		
		android:layout_gravity="center">
	
    	<Button android:id="@+id/backButton"
    		android:gravity="center"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"	               
	        android:layout_weight="1.8"
	        android:text="@string/back_button_label"
	        android:drawableLeft="@drawable/undo"/>
	    
	    <Button android:id="@+id/saveButton"
    		android:gravity="center"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"	               
	        android:layout_weight="1"
	        android:text="@string/save_button_label"
	        android:drawableLeft="@drawable/ic_menu_save"/>    
   	</LinearLayout>			
	      
</LinearLayout>
