<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:baselineAligned="false"
	android:background="@color/background"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dip"  
	android:orientation="vertical">
    <LinearLayout android:orientation="vertical" 
		android:layout_height="0dip" 
		android:layout_width="fill_parent" 
		android:layout_gravity="center"
		android:layout_weight="1">
		
        <TextView android:text="@string/default_account_text" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/>
		<Spinner android:id="@+id/defaultAccountSpinner"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dip"/>
						
		<TextView android:text="@string/rows_per_page_text" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/>
		<EditText android:id="@+id/rowsPerPageEditText"
		    android:inputType="number"
		    android:maxLength="2"
		    android:gravity="right"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"/>	
			
		<TextView android:text="@string/language_text" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/>
        <Spinner android:id="@+id/languageSpinner" 
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content"
        	android:layout_marginBottom="10dip"/>	
	</LinearLayout> 
		
    <LinearLayout android:orientation="horizontal" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 		
		android:layout_gravity="center">
	
    	<Button android:id="@+id/backButton"
    		android:gravity="center"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"	               
	        android:layout_weight="1.8"
	        android:text="@string/back_button_label"
	        android:drawableLeft="@drawable/undo"/>
	    
	    <Button android:id="@+id/saveButton"
    		android:gravity="center"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"	               
	        android:layout_weight="1"
	        android:text="@string/save_button_label"
	        android:drawableLeft="@drawable/ic_menu_save"/>    
   	</LinearLayout>			
	      
</LinearLayout>
