<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="10dip"  
	android:orientation="vertical">
    <LinearLayout android:orientation="vertical" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:layout_gravity="center"
		android:layout_weight="1">
		       
        <TextView android:text="@string/accounts_label" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"/>
		<Spinner android:id="@+id/accountsFilteringSpinner"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"/>
		
		<TextView android:text="@string/year_text" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dip"/>
				
		<LinearLayout android:orientation="horizontal" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 		
			android:layout_gravity="center">
						
			<ImageButton android:id="@+id/rollYearBackwardButton"
				android:layout_width="match_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:src="@drawable/ic_menu_back"/>

			<TextView android:id="@+id/yearTimeFilter" 
	        	android:layout_width="match_parent"  
	        	android:layout_height="wrap_content"
	        	android:layout_weight="0.7"
	        	android:gravity="center"
	        	android:textSize="14pt"
	        	android:textColor="@color/pure_white_color"/>
					
			<ImageButton android:id="@+id/rollYearForwardButton"
				android:layout_width="match_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="1"					
				android:src="@drawable/ic_menu_forward"/>	
		</LinearLayout> 					
	</LinearLayout> 
		
    <LinearLayout android:orientation="horizontal" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 		
		android:layout_gravity="center">
	
    	<Button android:id="@+id/backButton"
    		android:gravity="center"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"	               
	        android:layout_weight="1.8"
	        android:text="@string/back_button_label"
	        android:drawableLeft="@drawable/undo"/>
	    
	    <Button android:id="@+id/showReportButton"
    		android:gravity="center"
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"	               
	        android:layout_weight="1"
	        android:text="@string/show_report_button_label"
	        android:drawableLeft="@drawable/ic_menu_chart"/>    
   	</LinearLayout>			
	      
</LinearLayout>
