<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:background="@color/background"
  	android:padding="10dip"
  	android:layout_width="match_parent"
  	android:layout_height="match_parent">
    
    <TableLayout 
    	android:id="@+id/tableLayout1"
	    android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:stretchColumns="1">

		<TableRow>
			<TextView android:layout_column="1"/>		
	        <TextView
	            android:text="@string/current_month_text"
	            android:gravity="right"
	            android:padding="3dip" />
    	</TableRow>
		
		<View android:layout_height="1dip"
	        android:background="#FF909090" />
		
		<TableRow>
			<TextView
	            android:layout_column="1"
	            android:text="@string/income_text"
	            android:padding="3dip" />		
	        <TextView
	        	android:id="@+id/currentMonthIncomeAmount"
	            android:text="30 UAH"
	            android:gravity="right"
	            android:padding="3dip" />
    	</TableRow>
    	<TableRow>
			<TextView
	            android:layout_column="1"
	            android:text="@string/expense_text"
	            android:padding="3dip" />		
	        <TextView
	        	android:id="@+id/currentMonthExpenseAmount"
	            android:text="3450 UAH"
	            android:gravity="right"
	            android:padding="3dip" />
    	</TableRow>
    	
    	<View android:layout_height="1dip"
    		android:layout_marginBottom="15dip"
	        android:background="#FF909090" />
		
		
		<TableRow>
			<TextView android:layout_column="1"/>		
	        <TextView
	            android:text="@string/balance_text"
	            android:gravity="right"
	            android:padding="3dip" />
    	</TableRow>
		
    </TableLayout>
  
  	<GridView
  		android:id="@+id/gridView"
  	/>
  
</LinearLayout>
